<resources>
  <string name="app_name">ParkApp</string>
  <string name="default_name">王尼玛</string>
  <string name="certain">确定</string>
  <string name="confirm">确认</string>
  <string name="cancel">取消</string>
  <string name="repress_exit_app">再按一次退出程序</string>
  <string name="select_date">请选择日期</string>
  <string name="select_time">请选择时间</string>
  <string name="today">今天</string>
  <!-- digits -->
  <string name="digits_integer_number">0123456789</string>
  <string name="digits_decimal_number">0123456789.</string>
  <string name="digits_password">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
  <!-- splash -->
  <string name="splash_jump">跳过 {second}</string>
  <!-- 首页 -->
  <string name="rent">泊位共享</string>
  <string name="service">增值服务</string>
  <string name="personal">我的</string>
  <!--  登录、注册 -->
  <string name="input_phone_number">请输入您的手机号</string>
  <string name="input_sms_captch">请输入短信验证码</string>
  <string name="input_password">请输入密码</string>
  <string name="input_password_confirm">请确认密码</string>
  <string name="get_sms_captch">获取验证码</string>
  <string name="register">注册</string>
  <string name="login">登录</string>
  <string name="register_now">立即注册</string>
  <string name="forget_password">忘记密码</string>
  <string name="captcha_resend">重发({second}s)</string>
  <string name="input_right_phone_number">请输入正确的手机号码</string>
  <string name="input_right_captcha">验证码错误</string>
  <string name="need_fetch_captcha">请先获取验证码</string>

  <!-- 个人中心 -->
  <string name="personal_center">个人中心</string>
  <string name="my_collection">我的收藏</string>
  <string name="history_order">历史订单</string>
  <string name="lock_manage">地锁管理</string>
  <string name="modify_password">修改密码</string>
  <string name="version_update">版本更新</string>
  <string name="share_to_friends">分享给好友</string>
  <string name="contact_service">联系客服</string>
  <string name="sign_out">注销</string>
  <string name="share_title_message">ParkApp下载地址</string>
  <string name="call_service_number">10086</string>

  <!-- 修改密码 -->
  <string name="change_password">修改密码</string>
  <string name="input_old_password">请输入旧密码</string>
  <string name="input_new_password">请输入新密码</string>

  <!-- 个人信息 -->
  <string name="personal_info">我的资料</string>
  <string name="save">保存</string>
  <string name="nick_name">昵称</string>
  <string name="sex">性别</string>
  <string name="birthday">生日</string>
  <string name="email">邮箱</string>
  <string name="area">所在地区</string>
  <string name="address_detail">详细地址</string>
  <string name="mobile">手机号</string>
  <string name="car_number">车牌号</string>
  <string name="account">账户</string>
  <string name="male">男</string>
  <string name="female">女</string>

  <!-- 增值服务 -->
  <string name="all">全部</string>
  <string name="map">地图</string>
  <string name="gas_station">加油站</string>
  <string name="s4_shop">4S店</string>
  <string name="car_repair">修车</string>
  <string name="car_beauty">美容</string>

  <!-- 泊位共享 -->
  <string name="lease_rent">求租</string>
  <string name="lease_rented">出租</string>
  <string name="simple_introduction">简单介绍......</string>
  <string name="new_unlock_berth">新增无锁泊位</string>
  <string name="name">名称</string>
  <string name="start_time">开始时间</string>
  <string name="end_time">结束时间</string>
  <string name="address">地址</string>
  <string name="contact_way">联系方式</string>
  <string name="i_want_rented">我要出租</string>
  <string name="message_se_time">开始时间比结束时间晚哦...</string>
  <!-- 其它 -->
  <string name="can_not_null">不能为空</string>
  <string name="please_input">请输入</string>
</resources>
