<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="@dimen/length_large"
      android:layout_weight="1"
      android:padding="@dimen/padding_extra_large"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <android.support.percent.PercentRelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_vertical"
          >
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/login_et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_underline_selector"
            android:digits="@string/digits_integer_number"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="@dimen/padding_middle"
            android:paddingRight="@dimen/padding_smallest"
            android:paddingTop="@dimen/padding_middle"
            android:textSize="@dimen/font_normal"
            />
      </android.support.percent.PercentRelativeLayout>
      <android.support.percent.PercentRelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_input_underline_selector"
            android:digits="@string/digits_password"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingBottom="@dimen/padding_middle"
            android:paddingRight="@dimen/margin_extra_large"
            android:paddingTop="@dimen/padding_middle"
            android:textSize="@dimen/font_normal"
            />
        <ImageView
            android:id="@+id/login_iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_password_visible"
            />
      </android.support.percent.PercentRelativeLayout>
      <Button
          android:id="@+id/login_btn_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/length_little_small"
          android:text="@string/login"
          android:textSize="@dimen/font_little_large"
          style="@style/Button.OvalBlue"
          />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <TextView
            android:id="@+id/login_tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/padding_normal"
            android:text="@string/forget_password"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/font_normal"
            />
        <TextView
            android:id="@+id/login_tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/padding_normal"
            android:text="@string/register_now"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/font_normal"
            />
      </RelativeLayout>
    </LinearLayout>

  </ScrollView>

</LinearLayout>