<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/length_middle"
      >
    <Button
        android:layout_width="@dimen/length_middle"
        android:layout_height="@dimen/length_middle"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bg_back"
        android:gravity="center"
        android:text="@string/all"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/font_normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/service"
        android:textSize="@dimen/font_large"
        />
    <Button
        android:layout_width="@dimen/length_middle"
        android:layout_height="@dimen/length_middle"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_back"
        android:gravity="center"
        android:text="@string/map"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/font_normal"
        />
  </RelativeLayout>
  <View style="@style/LineMatch" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/length_little_small"
      >

  </LinearLayout>
</LinearLayout>