<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/length_middle"
      >
    <ImageButton
        android:id="@+id/personal_info_ib_back"
        android:layout_width="@dimen/length_middle"
        android:layout_height="@dimen/length_middle"
        android:background="@drawable/bg_back"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_back"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/personal_info"
        android:textSize="@dimen/font_large"
        />
    <Button
        android:id="@+id/personal_info_btn_save"
        android:layout_width="@dimen/length_middle"
        android:layout_height="@dimen/length_middle"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_back"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/font_normal"
        />
  </RelativeLayout>
  <View style="@style/LineMatch" />
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:scrollbars="none"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_extreme_large"
          >
        <ImageView
            android:layout_width="@dimen/length_large"
            android:layout_height="@dimen/length_large"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_personal_header"
            />
      </RelativeLayout>
      <View style="@style/LineMatch" />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_nick_name"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nick_name"
            android:textSize="@dimen/font_normal"
            />
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/personal_info_et_nick_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_nick_name"
            android:background="@android:color/transparent"
            android:maxLength="8"
            android:singleLine="true"
            />
      </RelativeLayout>
      <View style="@style/LineNormal" />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_sex"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sex"
            android:textSize="@dimen/font_normal"
            />
        <RadioGroup
            android:id="@+id/personal_info_rg_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_sex"
            android:orientation="horizontal"
            >
          <RadioButton
              android:id="@+id/personal_info_rb_sex_male"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:checked="true"
              android:text="@string/male"
              />
          <RadioButton
              android:id="@+id/personal_info_rb_sex_female"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/margin_large"
              android:text="@string/female"
              />
        </RadioGroup>
      </RelativeLayout>
      <View style="@style/LineNormal" />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_birthday"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/birthday"
            android:textSize="@dimen/font_normal"
            />
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/personal_info_et_birthday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_birthday"
            android:background="@android:color/transparent"
            />
      </RelativeLayout>
      <View style="@style/LineNormal" />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_email"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/email"
            android:textSize="@dimen/font_normal"
            />
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/personal_info_et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_email"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"
            />
      </RelativeLayout>
      <View style="@style/LineNormal" />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_area"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/area"
            android:textSize="@dimen/font_normal"
            />
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/personal_info_et_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_area"
            android:background="@android:color/transparent"
            />
      </RelativeLayout>
      <View style="@style/LineNormal" />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_address_detail"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address_detail"
            android:textSize="@dimen/font_normal"
            />
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/personal_info_et_address_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_address_detail"
            android:background="@android:color/transparent"
            android:singleLine="true"
            />
      </RelativeLayout>
      <View
          android:layout_height="@dimen/length_smallest"
          style="@style/LineMatch"
          />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_mobile"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mobile"
            android:textSize="@dimen/font_normal"
            />
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/personal_info_et_mobile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_mobile"
            android:background="@android:color/transparent"
            />
      </RelativeLayout>
      <View style="@style/LineNormal" />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_car_number"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/car_number"
            android:textSize="@dimen/font_normal"
            />
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/personal_info_et_car_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_car_number"
            android:background="@android:color/transparent"
            android:digits="@string/digits_password"
            android:maxLength="10"
            />
      </RelativeLayout>
      <View style="@style/LineNormal" />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:paddingLeft="@dimen/padding_normal"
          >
        <TextView
            android:id="@+id/info_account"
            android:layout_width="@dimen/length_middle"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/account"
            android:textSize="@dimen/font_normal"
            />
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/personal_info_et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_toRightOf="@id/info_account"
            android:background="@android:color/transparent"
            android:digits="@string/digits_integer_number"
            android:singleLine="true"
            />
      </RelativeLayout>
      <View
          android:layout_marginBottom="@dimen/margin_normal"
          style="@style/LineNormal"
          />
    </LinearLayout>
  </ScrollView>
</LinearLayout>