<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/length_middle"
      >
    <ImageButton
        android:id="@+id/change_password_ib_back"
        android:layout_width="@dimen/length_middle"
        android:layout_height="@dimen/length_middle"
        android:background="@drawable/bg_back"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_back"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/change_password"
        android:textSize="@dimen/font_large"
        />
  </RelativeLayout>
  <View style="@style/LineMatch" />
  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:padding="@dimen/padding_extra_large"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <android.support.percent.PercentRelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          android:gravity="center_vertical"
          >
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/change_password_et_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:digits="@string/digits_integer_number"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="@dimen/font_normal"
            app:layout_widthPercent="98%"
            />
      </android.support.percent.PercentRelativeLayout>
      <View style="@style/LineMatch" />
      <android.support.percent.PercentRelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          >
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/change_password_et_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:digits="@string/digits_password"
            android:hint="@string/input_old_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textSize="@dimen/font_normal"
            app:layout_widthPercent="85%"
            />
        <ImageView
            android:id="@+id/change_password_iv_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_password_visible"
            />
      </android.support.percent.PercentRelativeLayout>
      <View style="@style/LineMatch" />
      <android.support.percent.PercentRelativeLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/length_little_small"
          >
        <com.cqut.haiyuchen.parkapp.ui.widget.ClearEditText
            android:id="@+id/change_password_et_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:digits="@string/digits_password"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:maxLength="15"
            android:textSize="@dimen/font_normal"
            app:layout_widthPercent="85%"
            />
        <ImageView
            android:id="@+id/change_password_iv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_password_visible"
            />
      </android.support.percent.PercentRelativeLayout>
      <View style="@style/LineMatch" />
      <Button
          android:id="@+id/change_password_btn_change_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/length_little_small"
          android:text="@string/certain"
          android:textSize="@dimen/font_little_large"
          style="@style/Button.OvalBlue"
          />
    </LinearLayout>

  </ScrollView>
  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/divider_size"
      android:background="@color/divider"
      />

</LinearLayout>