<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/length_middle"
      >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/lease_btn_rent"
          android:layout_width="@dimen/length_large"
          android:layout_height="@dimen/lease_head_length"
          android:background="@drawable/bg_btn_rent"
          android:enabled="false"
          android:text="@string/lease_rent"
          android:textColor="@color/button_lease_color"
          />

      <Button
          android:id="@+id/lease_btn_rented"
          android:layout_width="@dimen/length_large"
          android:layout_height="@dimen/lease_head_length"
          android:background="@drawable/bg_btn_rented"
          android:text="@string/lease_rented"
          android:textColor="@color/button_lease_color"
          />
    </LinearLayout>
    <Button
        android:layout_width="@dimen/length_middle"
        android:layout_height="@dimen/length_middle"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_back"
        android:gravity="center"
        android:text="@string/map"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/font_normal"
        />
  </RelativeLayout>
  <View style="@style/LineMatch" />
  <include
      layout="@layout/layout_lease_rent"
      android:id="@+id/lease_layout_rent"
      />
  <include
      layout="@layout/layout_lease_rented"
      android:id="@+id/lease_layout_rented"
      android:visibility="gone"
      />
</LinearLayout>